--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,52 +1,67 @@
-name: Build and Deploy
+name: Build and Deploy to GitHub Pages
 
 on:
-    push:
-        branches:
-            - main
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+  workflow_dispatch: # Memungkinkan manual trigger
 
 permissions:
-    contents: read
-    pages: write
-    id-token: write
+  contents: read
+  pages: write
+  id-token: write
 
 concurrency:
-    group: "pages"
-    cancel-in-progress: false
+  group: "pages"
+  cancel-in-progress: false
 
 jobs:
-    build:
-        environment:
-            name: github-pages
-            url: ${{ steps.deployment.outputs.page_url }}
-        runs-on: ubuntu-latest
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
 
-        steps:
-            - name: Check out the code
-              uses: actions/checkout@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
 
-            - name: Set up bun
-              uses: oven-sh/setup-bun@v2
-              with:
-                  bun-version: latest
+      - name: Install dependencies
+        run: npm ci
 
-            - name: Install dependencies
-              run: bun install
+      - name: Create .env file
+        run: |
+          echo "VITE_NICKNAME=PanPanFR" > .env
+          echo "VITE_FULL_NAME=Pandu Fatikha Rahmadana" >> .env
+          echo "VITE_GITHUB_LINK=https://github.com/PanPanFR" >> .env
+          echo "VITE_LINKEDIN_LINK=https://www.linkedin.com/in/pandu-fatikha-rahmadana" >> .env
+          echo "VITE_GITHUB_API_LINK=https://github-readme-stats-ebon-alpha.vercel.app/api" >> .env
 
-            - name: Use the env.example file
-              run: cp .env.example .env
+      - name: Run linting
+        run: npm run lint
 
-            - name: Run build
-              run: bun run build
-            
-            - name: Copy index.html to 404.html for routing
-              run: cp ./dist/index.html ./dist/404.html
+      - name: Build
+        run: npm run build
 
-            - name: Upload artifact
-              uses: actions/upload-pages-artifact@v3
-              with:
-                  path: "./dist"
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
 
-            - name: Deploy to GitHub Pages
-              id: deployment
-              uses: actions/deploy-pages@v4
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: './dist'
+
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    if: github.ref == 'refs/heads/main' # Hanya deploy dari main branch
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
