Clean up codebase: Remove unused files, debug logs, and unused environment variables

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 VITE_FULL_NAME="Pandu Fatikha Rahmadana"
 VITE_NICKNAME="PanPan"
-VITE_TITLE="Fullstack | Software Engineer"
+VITE_TITLE="Software Engineer"
 VITE_SPREADSHEET_ID=1kEt45XK0KdlPurKv475ytcxxZT8_PS6wb9V4D34SV-U
 VITE_GITHUB_LINK=https://github.com/PanPanFR
 VITE_LINKEDIN_LINK=https://www.linkedin.com/in/pandufr
