--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
 		"react-chartjs-2": "^5.3.0",
 		"react-dom": "^19.1.1",
 		"react-error-boundary": "^6.0.0",
+		"react-fast-marquee": "^1.6.5",
+		"react-icons": "^5.5.0",
 		"react-router-dom": "^7.7.1",
 		"zod": "^4.0.17"
 	},
 	"devDependencies": {
-		"@tailwindcss/vite": "^4.1.11",
-		"tailwindcss": "^4.1.11",
 		"@eslint/js": "^9.32.0",
+		"@tailwindcss/vite": "^4.1.11",
 		"@types/papaparse": "^5.3.16",
 		"@types/react": "^19.1.9",
 		"@types/react-dom": "^19.1.7",
@@ -34,6 +35,7 @@
 		"eslint-plugin-react-refresh": "^0.4.20",
 		"globals": "^16.3.0",
 		"prettier": "^3.6.2",
+		"tailwindcss": "^4.1.11",
 		"terser": "^5.43.1",
 		"typescript": "~5.8.3",
 		"typescript-eslint": "^8.39.0",
