--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 	"dependencies": {
 		"chart.js": "^4.5.0",
 		"framer-motion": "^12.23.12",
-		"lucide-react": "^0.536.0",
+		"lucide-react": "^0.544.0",
 		"papaparse": "^5.5.3",
 		"react": "^19.1.1",
 		"react-chartjs-2": "^5.3.0",
@@ -21,7 +21,15 @@
 		"react-fast-marquee": "^1.6.5",
 		"react-icons": "^5.5.0",
 		"react-router-dom": "^7.7.1",
-		"zod": "^4.0.17"
+		"swr": "^2.3.6",
+		"vite-plugin-pwa": "^1.0.3",
+		"workbox-cacheable-response": "^7.3.0",
+		"workbox-expiration": "^7.3.0",
+		"workbox-precaching": "^7.3.0",
+		"workbox-routing": "^7.3.0",
+		"workbox-strategies": "^7.3.0",
+		"workbox-window": "^7.3.0",
+		"zod": "^4.1.9"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.32.0",
@@ -29,7 +37,7 @@
 		"@types/papaparse": "^5.3.16",
 		"@types/react": "^19.1.9",
 		"@types/react-dom": "^19.1.7",
-		"@vitejs/plugin-react-swc": "^3.11.0",
+		"@vitejs/plugin-react-swc": "^4.1.0",
 		"eslint": "^9.32.0",
 		"eslint-plugin-react-hooks": "^5.2.0",
 		"eslint-plugin-react-refresh": "^0.4.20",
