Update .env.example with template values

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
-VITE_FULL_NAME="Pandu Fatikha Rahmadana"
-VITE_NICKNAME="PanPan"
-VITE_TITLE="Software Engineer"
-VITE_SPREADSHEET_ID=1kEt45XK0KdlPurKv475ytcxxZT8_PS6wb9V4D34SV-U
-VITE_GITHUB_LINK=https://github.com/PanPanFR
-VITE_LINKEDIN_LINK=https://www.linkedin.com/in/pandufr
+VITE_FULL_NAME="Your Full Name"
+VITE_NICKNAME="YourNickname"
+VITE_TITLE="Your Professional Title"
+VITE_SPREADSHEET_ID="your_spreadsheet_id_here"
+VITE_GITHUB_LINK="https://github.com/yourusername"
+VITE_LINKEDIN_LINK="https://www.linkedin.com/in/yourname"
 VITE_CONTRIBUTIONS_LANGS_COUNT=10
 VITE_CONTRIBUTIONS_INCLUDE_ALL_COMMITS=false
-VITE_GITHUB_API_LINK=https://github-stats-dusky-mu.vercel.app
-VITE_WEBSITE_LINK=https://PanPanFR.github.io
+VITE_GITHUB_API_LINK="https://your-github-stats-api.vercel.app"
+VITE_WEBSITE_LINK="https://yourusername.github.io"
