--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@vercel/speed-insights": "^1.2.0",
 		"chart.js": "^4.5.0",
 		"framer-motion": "^12.23.12",
 		"lucide-react": "^0.544.0",
