blog: fetch from Sheets with minimal columns (name,url), auto-thumbnail via mShots; Blog cards open single-panel website preview modal; hide empty left panel; minor footer bg tweak; docs: add secrets note in Vercel action per konteks.md

--- a/.github/workflows/vercel-deploy.yml
+++ b/.github/workflows/vercel-deploy.yml
@@ -16,6 +16,8 @@ jobs:
       - name: Deploy to Vercel
         uses: amondnet/vercel-action@v25
         with:
+          # You need to add these secrets to your GitHub repository
+          # https://docs.github.com/en/actions/security-guides/encrypted-secrets#creating-encrypted-secrets-for-a-repository
           vercel-token: ${{ secrets.VERCEL_TOKEN }}
           vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
           vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
